# Thesis

./: .gitignore  ANALYSIS.md  CASE_SELECTION.md  Expose.md  LOVABLE_PROMPT.md  RECRUITMENT.aux  RECRUITMENT.fdb_latexmk  RECRUITMENT.fls  RECRUITMENT.md  RECRUITMENT.out  RECRUITMENT.tex  RESULTS.md  USER_STUDY.md  pyproject.toml
configs/: swin_tiny.yaml  train_config.yaml  vit_base.yaml  vit_base_perclass.yaml
configs/archive/run001_densenet121_2025-02-25/: densenet121.yaml
configs/archive/run002_swin_tiny_v1_2025-02-25/: swin_tiny.yaml
configs/archive/run003_swin_tiny_v2_2026-02-26/: swin_tiny.yaml
configs/archive/run005_swin_tiny_v3_2026-02-13/: swin_tiny.yaml
docs/: EXPLAINABILITY_VERIFICATION_CHECKLIST.md  INTERPRETABILITY_GUIDE.md
frontend/: index.html  tailwind.config.ts  update_trial.patch
frontend/.lovable/: plan.md
frontend/src/: App.tsx  index.css
frontend/supabase/: config.toml
latex/: RECRUITMENT.tex  RECRUITMENT_DE.tex  RECRUITMENT_REDDIT.tex
notebooks/: explainability_verification.ipynb  explore_chexpert_labels.ipynb  kaggle_training.ipynb
scripts/: analyze_multilabel.py  attention_maps.py  calibrate.py  compute_explainability_metrics.py  create_val_split.py  fairness_analysis.py  gradcam.py  integrated_gradients.py  select_bonus_images.py  select_study_images.py  shap_analysis.py  split_train_test.py
src/: dataset.py  ensemble.py  evaluate.py  model.py  train.py  utils.py
supabase backup/: study_block_surveys_rows.csv  study_email_subscriptions_rows.csv  study_sessions_rows.csv  study_trials_rows.csv
(+47 files in other folders)
